se añadieron imágenes y contenido a index.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
@@ -6,7 +6,19 @@
     <title>Nuestros restaurantes</title>
   </head>
   <body>
-    
+    <h1 class="titulo">« Nuestros restaurantes »</h1>
+
+    <img src="/images/barcelona.webp" alt="Imágen de restaurant en Barcelona" />
+    <img  src="/images/buenos-aires.webp" alt="Imágen de restaurant en Buenos Aires"/>
+    <img src="/images/madrid.webp" alt="Imágen de restaurant en Madrid" />
+    <img src="/images/miami.webp" alt="Imágen de restaurant en Miami" />
+    <img src="/images/paris.webp" alt="Imágen de restaurant en Paris" />
+    <img src="/images/pipa.webp" alt="Imágen de restaurant en Pipa" />
+    <img src="/images/rio-de-janeiro.webp" alt="Imágen de restaurant en Rio De Janeiro"/>
+    <img src="/images/roma.webp" alt="Imágen de restaurant en Roma" />
+    <img src="/images/rosario.webp" alt="Imágen de restaurant en Rosario" />
+    <img src="/images/tokio.webp" alt="Imágen de restaurant en Tokio" />
+
     <script type="module" src="/main.js"></script>
   </body>
 </html>
